[gd_scene load_steps=15 format=2]

[ext_resource path="res://Prefabs/Godette.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level/spike.gd" type="Script" id=2]
[ext_resource path="res://Scripts/debugger.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Borders.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/game_controller.gd" type="Script" id=5]
[ext_resource path="res://Art/Tiles/Center-Fill.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Level/spawner.gd" type="Script" id=7]
[ext_resource path="res://Prefabs/3x1Platform.tscn" type="PackedScene" id=8]
[ext_resource path="res://Art/UI-Art/squarewhite.png" type="Texture" id=9]
[ext_resource path="res://Art/Tiles/Top-Center-Fill.png" type="Texture" id=10]
[ext_resource path="res://Scripts/gui_controller.gd" type="Script" id=11]
[ext_resource path="res://Scripts/croben_button.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 384, 24 )

[node name="Gameplay" type="Node2D"]
position = Vector2( 384, -640 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Godette" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 410.74 )

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 64, 64 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Center-Fill" type="Sprite" parent="Spawner"]
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 0.2
autostart = true

[node name="Borders" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 2560 )

[node name="Borders2" parent="." instance=ExtResource( 4 )]

[node name="Spike" type="Area2D" parent="."]
position = Vector2( 0, 896 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Spike"]
self_modulate = Color( 0.776471, 0.184314, 0.184314, 1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 768, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike"]
shape = SubResource( 1 )

[node name="InitialPlatform" parent="." instance=ExtResource( 8 )]
position = Vector2( -192.063, 320 )

[node name="InitialGround" type="StaticBody2D" parent="."]
position = Vector2( 0, 576 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InitialGround"]
position = Vector2( 0, -29 )
z_index = 5
shape = SubResource( 2 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="InitialGround"]
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 768, 128 )

[node name="GUI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 11 )

[node name="Debug" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Debug"]
anchor_right = 1.0
margin_bottom = 66.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblOSData" type="Label" parent="GUI/Debug/VBoxContainer"]
visible = false
margin_right = 480.0
margin_bottom = 14.0
text = "Device touch support = maybe"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblGameData" type="Label" parent="GUI/Debug/VBoxContainer"]
margin_right = 480.0
margin_bottom = 48.0
text = "Game Data Here
Game Data Here
Game Data Here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="MarginContainer" parent="GUI"]
anchor_right = 1.0
margin_right = 3.05176e-05
margin_bottom = 94.0
rect_min_size = Vector2( 480, 94 )
mouse_filter = 2
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD"]
margin_left = 15.0
margin_top = 15.0
margin_right = 465.0
margin_bottom = 79.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD/HBoxContainer"]
margin_right = 382.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="LevelLabel" type="Label" parent="GUI/HUD/HBoxContainer/VBoxContainer"]
margin_right = 382.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level: 1"
valign = 1

[node name="ScoreLabel" type="Label" parent="GUI/HUD/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 382.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Score: 0"
valign = 1

[node name="MenuButton" type="TextureButton" parent="GUI/HUD/HBoxContainer"]
margin_left = 386.0
margin_right = 450.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 12 )
pressed_color = Color( 0.478431, 0.960784, 0.282353, 1 )

[node name="Menu" type="MarginContainer" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 200
custom_constants/margin_left = 50
custom_constants/margin_bottom = 250
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/Menu"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 50.0
margin_top = 200.0
margin_right = 430.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Menu"]
margin_left = 50.0
margin_top = 200.0
margin_right = 430.0
margin_bottom = 603.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MenuLabel" type="Label" parent="GUI/Menu/VBoxContainer"]
margin_right = 380.0
margin_bottom = 14.0
text = "Menu"
align = 1
valign = 1

[node name="Home" type="TextureButton" parent="GUI/Menu/VBoxContainer"]
self_modulate = Color( 0.180392, 0.537255, 0.878431, 1 )
margin_left = 126.0
margin_top = 34.0
margin_right = 254.0
margin_bottom = 98.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 12 )
pressed_color = Color( 0.478431, 0.960784, 0.282353, 1 )

[node name="Restart" type="TextureButton" parent="GUI/Menu/VBoxContainer"]
self_modulate = Color( 0.721569, 0.286275, 0.239216, 1 )
margin_left = 126.0
margin_top = 118.0
margin_right = 254.0
margin_bottom = 182.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 12 )
pressed_color = Color( 0.478431, 0.960784, 0.282353, 1 )

[node name="Close" type="TextureButton" parent="GUI/Menu/VBoxContainer"]
self_modulate = Color( 0.941176, 0.580392, 0.117647, 1 )
margin_left = 126.0
margin_top = 202.0
margin_right = 254.0
margin_bottom = 266.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 12 )
pressed_color = Color( 0.478431, 0.960784, 0.282353, 1 )
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Spike" to="Spike" method="_on_Spike_body_entered"]
[connection signal="body_exited" from="Spike" to="Spike" method="_on_Spike_body_exited"]
[connection signal="pressed" from="GUI/HUD/HBoxContainer/MenuButton" to="GUI" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Home" to="GUI" method="_on_Home_pressed"]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Restart" to="GUI" method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Close" to="GUI" method="_on_Close_pressed"]
